examples/passing/ModuleDeps/M3.purs
module M3 where

baz = 1
