examples/failing/ImportHidingModule/A.purs
module A where
x = 1
